#134 [root] Prepare for 1.3.0 development